--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -8,6 +8,22 @@
     font-size: 20px;
 }
 
+.btn-send {
+    @include button;
+    width: 220px;
+    height: 40px;
+    font-size: 16px;
+
+    &:focus {
+        outline: 1px solid $ceramic;
+        border: 1px solid $ceramic;
+    }
+    &:disabled {
+        color: $ui-disabled;
+        border: 1px solid $ui-disabled;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .btn-default {
         &:hover {
@@ -21,6 +37,23 @@
             box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
             background: rgba(217, 217, 217, 0.1);
             border: none;
+        }
+    }
+
+    .btn-send {
+        @include button;
+        width: 220px;
+        height: 40px;
+        font-size: 16px;
+
+        &:active {
+            outline: 1px solid $ceramic;
+            border: 1px solid $ceramic;
+        }
+
+        &:hover {
+            color: $ceramic;
+            border: 1px solid $ceramic;
         }
     }
 }
