--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -18,6 +18,21 @@
         outline: 1px solid $ceramic;
         border: 1px solid $ceramic;
     }
+
+    &:disabled {
+        color: $ui-disabled;
+        border: 1px solid $ui-disabled;
+    }
+}
+
+.btn-submit {
+    @include button;
+    width: 90px;
+    height: 40px;
+    font-size: 16px;
+    color: $light;
+    border: 1px solid $light;
+
     &:disabled {
         color: $ui-disabled;
         border: 1px solid $ui-disabled;
