--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -31,6 +31,67 @@
     &__nav {
         display: none;
     }
+
+    &__menu {
+        padding: 50px 10px;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        background-color: $light;
+        transition: all 0.4s;
+
+        &-active {
+            transform: translateX(100%);
+        }
+
+        &-close {
+            position: relative;
+            width: 20px;
+            height: 20px;
+
+            span {
+                display: block;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                width: 100%;
+                height: 1px;
+                background-color: $dark;
+
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+
+        &-nav {
+            margin-top: 50px;
+            padding-left: 14px;
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                padding: 0;
+                list-style-type: none;
+            }
+        }
+
+        &-link {
+            color: $dark;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: normal;
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+    }
 }
 
 .burger {
@@ -75,7 +136,13 @@
             text-transform: uppercase;
             text-decoration: none;
         }
+
+        &__menu {
+            display: none;
+        }
+
     }
+
 
     .burger {
         visibility: hidden;
@@ -91,6 +158,7 @@
 
         &__nav {
             margin-top: 36px;
+
             ul {
                 gap: 60px;
             }
