--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -27,6 +27,7 @@
         font-weight: 500;
         line-height: normal;
         text-transform: uppercase;
+
         &_active::before {
             content: '';
             position: absolute;
@@ -35,5 +36,130 @@
             bottom: -1px;
             background-color: rgba(0, 0, 0, 1);
         }
+    }
+
+    &__content {
+        margin-top: 60px;
+
+        &-item {
+            flex-direction: column;
+            row-gap: 20px;
+        }
+    }
+
+    &__card {
+        &-info {
+            border: 1px solid $dark;
+            border-top: none;
+            box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+            color: rgba(0, 0, 0, 1);
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 19px;
+        }
+
+        &-name {
+            padding: 11px 12px 0 12px;
+        }
+
+        &-price {
+            padding: 8px 12px 16px 12px;
+        }
+
+    }
+}
+
+@media screen and (min-width: 768px) {
+
+    .catalog {
+        &__tabs {
+            width: 460px;
+        }
+
+        &__content {
+            position: relative;
+            padding: 10px 0 0 10px;
+
+            &::after {
+                content: "";
+                position: absolute;
+                width: 200px;
+                height: 1px;
+                top: 0;
+                left: 0;
+                background-color: $dark;
+            }
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 1px;
+                height: 200px;
+                background-color: $dark;
+            }
+
+            &-item {
+                align-items: flex-start;
+                flex-wrap: wrap;
+                flex-direction: row;
+                column-gap: 20px;
+
+            }
+        }
+
+        &__card {
+            width: 340px;
+            min-height: 275px;
+
+            &-img {
+                width: 340px;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .catalog {
+        &__content {
+            padding: 25px 0 0 25px;
+
+            &-item {
+                gap: 35px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    .catalog {
+        padding-top: 40px;
+        &__title {
+            margin-top: 100px;
+        }
+       
+        &__card {
+            width: 285px;
+            min-height: 250px;
+
+            &-img {
+                width: 285px;
+                height: 180px;
+                object-fit: cover;
+            }
+        }
+
+        &__content {
+            &-item {
+                row-gap: 25px;
+                column-gap: 83px;
+            }
+        }
+    }
+
+    .footer {
+        margin-top: 100px;
     }
 }
