--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -1,4 +1,5 @@
 @use "/src/sass/base/variables.scss" as *;
+@use "/src/sass/base/mixin.scss" as *;
 
 .catalog {
     padding-top: 50px;
@@ -79,26 +80,7 @@
         &__content {
             position: relative;
             padding: 10px 0 0 10px;
-
-            &::after {
-                content: "";
-                position: absolute;
-                width: 200px;
-                height: 1px;
-                top: 0;
-                left: 0;
-                background-color: $dark;
-            }
-
-            &::before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 1px;
-                height: 200px;
-                background-color: $dark;
-            }
+            @include angle-decoration;
 
             &-item {
                 align-items: flex-start;
@@ -136,10 +118,11 @@
 @media screen and (min-width: 1920px) {
     .catalog {
         padding-top: 40px;
+
         &__title {
             margin-top: 100px;
         }
-       
+
         &__card {
             width: 285px;
             min-height: 250px;
