--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -39,6 +39,18 @@
     }
 }
 
+.btn-read {
+    @include button;
+    width: 145px;
+    height: 32px;
+    font-size: 14px;
+
+    &:focus {
+        outline: 1px solid $ceramic;
+        border: 1px solid $ceramic;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .btn-default {
         &:hover {
@@ -61,6 +73,18 @@
         height: 40px;
         font-size: 16px;
 
+        &:active {
+            outline: 1px solid $ceramic;
+            border: 1px solid $ceramic;
+        }
+
+        &:hover {
+            color: $ceramic;
+            border: 1px solid $ceramic;
+        }
+    }
+
+    .btn-read {
         &:active {
             outline: 1px solid $ceramic;
             border: 1px solid $ceramic;
