--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -70,6 +70,11 @@
         &__title {
             padding-left: 571px;
         }
+
+        &__cta {
+            animation-name: slideIn;
+            animation-duration: 3s;
+        }
     }
 }
 
