--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
 @use "/src/sass/libs/grids-responsive-min.css";
 @use "/src/sass/libs/fontello.css"; // Icon font
 @use "/src/sass/base/basic.scss";
+@use "/src/sass/base/animations.scss";
 
 @use "/src/sass/blocks/header.scss";
 @use "/src/sass/blocks/footer.scss";
